Update SignUp/Login form

--- a/SignUp-Login-Form/login.css
+++ b/SignUp-Login-Form/login.css
@@ -81,8 +81,14 @@ button {
     margin-left: 0;
  }
 
+input[type="checkbox"],
+select {
+    left: 10px;
+ }
+
  .login-options a {
     text-decoration: none;
+    right: 10px;
  }
  
  p {
