--- a/search-functionality/styles.css
+++ b/search-functionality/styles.css
@@ -1,4 +1,4 @@
-body {
+.hero-img {
     background-image: url(image7.jpg);
     background-size: cover;
     background-position: center;
@@ -8,19 +8,24 @@ body {
     display: flex;
     margin: 0;
     padding: 0;
+    height: 60vh;
+    position: relative;
 }
 
 #searchContainer {
     margin-top: 20px;
+    display: block;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    gap: 10px;
+    position: absolute  ;
+    margin-right: 350px;
+    transform: translate(50%, -50%);
 }
 
 input[type="text"] {
     width: 200%;
     padding: 5px;
+    margin-left: 100px;
     font-size: 16px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-style: italic;
@@ -28,10 +33,13 @@ input[type="text"] {
     border-radius: 25px;
     background-color: rgb(235, 227, 227);
     outline: none;
+    border: none;
 }
 
 button {
     padding: 3px;
+    margin-top: 10px;
+    margin-left: 130px;
     font-size: 16px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     border: none;
