--- a/Quiz-app/styles.css
+++ b/Quiz-app/styles.css
@@ -4,11 +4,50 @@
 
 body {
     font-family:"Libre Franklin";
-    padding-left: 0% auto;
     background-color: #f4f4f4;
     margin: 0;
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+.container {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.question {
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+button {
+    display: block;
+    width: 100px;
+    padding: 10px;
+    color: white;
+    border: none;
+    background-color: #007BFF;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+ button:hover {
+    background-color: #0056b3;
+ }
+
+ #result {
+    margin-top: 20px;
+    font-weight: bold;
+ }
