--- a/file-sharing-app/styles.css
+++ b/file-sharing-app/styles.css
@@ -21,3 +21,43 @@ h1 {
     text-align: center;
     margin-bottom: 20px;
 }
+
+button {
+    display: block;
+    padding: 10px;
+    color: whitesmoke;
+    border: none;
+    background-color: #007BFF;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0056B3;
+}
+
+#drop-area {
+    border: 2px dashed #007BFF;
+    padding: 20px;
+    text-align: center;
+    margin-top: 10px;
+}
+
+#file-list {
+    margin-top: 20px;
+    font-weight: bold;
+}
+
+#progress-bar {
+    width: 100px;
+    background-color: #f3f3f3;
+    border-radius: 5px;
+    overflow: hidden;
+    margin-top: 20px;
+}
+
+#progress {
+    height: 20px;
+    width: 0;
+    background-color: #007BFF;
+}
