--- a/admin-dashboard/styles.css
+++ b/admin-dashboard/styles.css
@@ -17,6 +17,25 @@ body {
     padding: 20px;
 }
 
+.sidebar-settings ul li a {
+    color: #fff;
+    font-weight: bold;
+}
+
+.sidebar-settings ul li button {
+    color: #fff;
+    font-weight: bold;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+body.dark-mode .sidebar-settings {
+    background-color: #3c3c6e;
+    border-top: 2px solid #ccc;
+}
+
+
 .sidebar .logo h2 {
     margin-bottom: 20px;
 }
@@ -35,12 +54,12 @@ body {
     text-decoration: none;
 }
 
-.settings ul {
+.sidebar-settings ul {
     list-style-type: none;
     padding: 0;
 }
 
-.settings ul li {
+.sidebar-settings ul li {
     margin-bottom: 20px;
 }
 
@@ -62,6 +81,7 @@ body {
 
 .dashboard-stats {
     display: flex;
+    gap: 20px;
     justify-content: space-between;
     margin-bottom: 30px;
 }
@@ -71,7 +91,7 @@ body {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    width: 23%;
+    width: 30%;
     text-align: center;
 }
 
